--- a/40_implementation.tex
+++ b/40_implementation.tex
@@ -18,7 +18,7 @@ In order to efficiently process the countless atomic operations that are implied
 
 \subsection{Language and Framework}
 \label{lab:lang}
-The first and probably most important step in creating an application is to decide on a programming language and framework\footnote{Since these two elements depend on one another, deciding on a framework inherently limits the choice of languages.}. Research about modern event- or actor-driven frameworks yielded several possibilities, most of which are listed in chapter \ref{lab:sota}. Based on the extent of framework documentation, interoperability with other technologies and community size, the two final options were \textit{Node.js} and \textit{Play!}. 
+After defining the prerequisites, the next step is to find a language and a framework that fit the defined needs; since these two elements depend on one another, deciding on a framework inherently limits the choice of languages. Research about modern event- or actor-driven frameworks yielded several possibilities, most of which are listed in chapter \ref{lab:sota}. Based on the extent of framework documentation, interoperability with other technologies and community size, the two final options were \textit{Node.js} and \textit{Play!}. 
 
 While \textit{Node.js} has the advantage of supporting a simple and widespread programming language and includes a high-performance event-loop, \textit{Play!} appealed by supporting a type-safe, object-oriented language (either \textit{Java} or \textit{Scala}) with a solid set of libraries due to \textit{Java}'s history as a popular enterprise language. Furthermore, scaling on single systems is handled very differently by the two frameworks with \textit{Node.js} leveraging multiple process instances and \textit{Play!} using an actor system. Finally, \textit{Play!} was chosen due to the better application structure and the superior CPU utilisation (considered that there may be some minor image processing operations).
 
@@ -29,7 +29,7 @@ The present Web application features two kinds of data storage: A \textit{MongoD
 
 The only asynchronous \textit{MongoDB} driver at the time of writing was \textit{ReactiveMongo}\footnote{\url{http://reactivemongo.org/}}, a driver implementation written in \textit{Scala} that basically exposes the \textit{MongoDB} API to the application without any additional features like included \textit{DAO}\footnote{Data Access Object, a pattern used by database libraries to simplify storage and retrieval of code objects in the database.} functionality. However, this enables a very flexible way of interacting with the database, which is especially suitable for atomic operations like increasing a single numeric value or deleting a property. \textit{ReactiveMongo} offers a \textit{Play!} plugin for easy integration with the framework (e.g. by managing connections according to application start/stop).
 
-For interfacing with the \textit{Redis} server, the \textit{rediscala}\footnote{\url{https://github.com/etaty/rediscala}} driver proved to be a good choice by offering non-blocking access to the most important server operations. \textit{rediscala} even offers dedicated actor superclasses designed for use with \textit{Akka} (see section \ref{lab:news}). On the downside, \textit{rediscala} does not provide a dedicated \textit{Play!} plugin, thus custom framework integration had to be implemented in order to use the driver. A diagram of the used technologies can be seen in figure \ref{fig:project}.
+For interfacing with the \textit{Redis} server, the \textit{rediscala}\footnote{\url{https://github.com/etaty/rediscala}} driver proved to be a good choice by offering non-blocking access to the most important server operations. \textit{rediscala} even offers dedicated actor superclasses designed for use with \textit{Akka} (see section \ref{lab:news}). On the downside, \textit{rediscala} does not provide a dedicated \textit{Play!} plugin, thus custom framework integration had to be implemented in order to use the driver. A diagram of the used technologies can be seen in figure \ref{fig:project}. 
 
 \begin{figure}
 \centering\small
@@ -42,7 +42,7 @@ The final project setup that resulted from the preceding considerations. Note th
 \end{figure}
 
 The application also makes use of several other libraries, e.g. for sending emails. Here, a great advantage of \textit{Scala} comes 
-into play: Due to being compiled to \textit{Java} bytecode, \textit{Scala} is binary compatible with all available \textit{Java} libraries. For instance, the \textit{Apache Commons}\footnote{\url{http://commons.apache.org/}} email implementation written in \textit{Java} can also be used to send emails in \textit{Scala}\footnote{Blocking \textit{Java} functions can also be wrapped with \textit{Futures} (see section \ref{lab:play} and section \ref{lab:basicasync}, \textit{Converting Blocking Code}) in order to create non-blocking, actor-based \textit{Scala} functions.}.
+into play: Due to being compiled to \textit{Java} bytecode, \textit{Scala} is binary compatible with all available \textit{Java} libraries. For instance, the \textit{Apache Commons}\footnote{\url{http://commons.apache.org/}} email implementation written in \textit{Java} can also be used to send emails in \textit{Scala}\footnote{Blocking \textit{Java} functions can also be wrapped with \textit{Futures} (see section \ref{lab:play} and section \ref{lab:basicasync}) in order to create non-blocking, actor-based \textit{Scala} functions.}.
 
 \section{Development}
 \label{lab:impl-dev}
@@ -182,7 +182,7 @@ Since \textit{Play!} does not expose the underlying actor structure to its libra
 \label{lab:news}
 The application also includes a news feed using a technology called \textit{Websockets} to send events to subscribed client applications over TCP. The basic idea is that when one user takes a specific action, other users that are interested in that action get notified instantly. A rather trivial approach would be to keep a collection of currently subscribed clients and notify them directly when a certain event occurs according to what events they have subscribed to. However, as defined in section \ref{sec:prerequitites}, \textit{Requirements}, the application should be scalable to multiple systems. This introduces a problem: Clients that subscribed on one particular system will not get events that occurred on other systems since the event is not propagated across all systems.
 
-The solution is to use a centralised messaging system. Options include dedicated protocols like \textit{AMQP}\footnote{Asynchronous Message Queuing Protocol}, but since the application already uses \textit{Redis}, which supports the \textit{Pub/Sub}\footnote{Publish-Subscribe} paradigm, using this system is more practicable. \textit{Pub/Sub} works by publishing messages to the central server, which forwards them to all systems who have subscribed to the corresponding message type.
+The solution is to use a centralised messaging system. Options include dedicated protocols like \textit{AMQP}\footnote{Asynchronous Message Queuing Protocol, \url{http://www.amqp.org/}}, but since the application already uses \textit{Redis}, which supports the \textit{Pub/Sub}\footnote{Publish-Subscribe, for \textit{Redis} implementation see \url{http://redis.io/topics/pubsub}} paradigm, using this system is more practicable. \textit{Pub/Sub} works by publishing messages to the central server, which forwards them to all systems who have subscribed to the corresponding message type.
 
 Publishing to the \textit{Redis} server can be easily done using the \textit{rediscala} library; for instance, the following line of code is used to publish a message when a user \texttt{abcd} likes a photo \texttt{1234}:
 \begin{JavaCode}
