--- a/60_conclusion.tex
+++ b/60_conclusion.tex
@@ -8,4 +8,4 @@ It can be concluded from the tests documented in chapter \ref{lab:eval} that asy
 
 Especially with the uprise of more frameworks and libraries, event- and actor-driven paradigms currently are gaining popularity and importance. There is an initiative called the \textit{Reactive Manifesto}, which advocates asynchronous, non-blocking behaviour throughout Web applications, even including client applications \cite{reactive}. Many emerging as well as older technologies are adding asynchronous functionality in order to offer modern functionality. Such technologies include the asynchronous additions made to \textit{C\#}\footnote{\url{http://msdn.microsoft.com/en-us/vstudio/hh341490.aspx}} in version 5, the \textit{Grails} 2.3 events API and the \texttt{@Async} annotated methods in \textit{Spring MVC} 3 \cite{Syme1983} \cite{Ledbrook2013}. Another notable example is the \textit{Martini}\footnote{\url{http://martini.codegangsta.io/}} framework for the \textit{Go}\footnote{\url{http://golang.org/}} language, which uses extensive asynchronous processing featuring a concurrency model called \textit{Pipelines}.
 
-Even though there are numerous new technologies, only few mature Web frameworks already make use of them, despite potentially large performance gains for exactly these systems. For instance, \textit{Node.js} has a shallow learning curve and exceptional performance and documentation, but lacks application structure and compile-time warnings. Many other frameworks that were taken into consideration for this thesis lacked either proper functionality or essential documentation. However, the high number of event- and actor-driven Web frameworks currently in early stages of development gives a positive outlook on the future progress of the subject. With demands and user numbers ever growing, the Web is merely at the beginning of reaching its full potential. Event- and actor-driven paradigms -- if sufficiently embraced by Web developers -- can play a major role in creating a fast, efficient Web for the future.
+Even though there are numerous new technologies, only few mature Web frameworks already make use of them, despite potentially large performance gains for exactly these systems. For instance, \textit{Node.js} has a shallow learning curve and exceptional performance and documentation, but lacks application structure and compile-time warnings. Many other frameworks that were taken into consideration for this thesis lacked either proper functionality or essential documentation. However, the high number of event- and actor-driven Web frameworks currently in early stages of development gives a positive outlook on the future progress of the subject. With demands and user numbers ever growing, the Web is merely at the beginning of reaching its full potential. Event- and actor-driven paradigms---if sufficiently embraced by Web developers---can play a major role in creating a fast, efficient Web for the future.
