--- a/50_evaluation.tex
+++ b/50_evaluation.tex
@@ -1,25 +1,25 @@
 \chapter{Evaluation}
 \label{lab:eval}
 
-In the previous chapter, the implementation characteristics of an actor-based Web framework were observed from the view of a developer (see chapter \ref{sec:impl}). While these aspects are important during the development of an application, once the application is publicly accessible, performance is a paramount factor. This chapter documents tests conducted with respect to performance criteria defined in chapter \ref{lab:technical} -- for example request frequency and response time (see section \ref{lab:frequency}).
+In the previous chapter, the implementation characteristics of an actor-based Web framework were observed from the view of a developer (see chapter \ref{sec:impl}). While these aspects are important during the development of an application, once the application is publicly accessible, performance is a paramount factor. This chapter documents tests conducted with respect to performance criteria defined in chapter \ref{lab:technical}---for example request frequency and response time (see section \ref{lab:frequency}).
 
 \section{Prerequisites}
 
 Modern Web server performance can be defined by the system's behaviour when processing a high number of simultaneous requests. Ideally, the response time for each request should be as low as possible and should not increase significantly with the number of simultaneous requests. 
 
-To test the behaviour of thread-based applications side by side to event-based applications, tests should preferably be conducted under very similar conditions, the only major difference being asynchronous processing. Since in section \ref{lab:lang} the \textit{Play!} framework was identified as a feasible choice for demonstrating asynchronous processing in Web frameworks, \textit{Play!} is also used in the following performance tests. To achieve comparable performance, the thread-based contender application should ideally also be run on the \textit{Java} virtual machine (JVM). This leaves numerous choices due to the high number of \textit{Java}-based Web frameworks. The first choice was the \textit{Grails}\footnote{\url{https://grails.org/}} framework, which is based on \textit{Groovy}\footnote{\url{http://groovy.codehaus.org/}} language. Since \textit{Groovy} -- like \textit{Scala} -- is also an extension language to \textit{Java} and can be run on the \textit{Java} VM, it seemed like a good choice to compare to \textit{Play!}. However, \textit{Grails} proved to have a much larger memory footprint compared to \textit{Play!} and even exceeded the 512MB memory limit on the server container (see below). This imbalance ruled out \textit{Grails} as a fitting contender. The \textit{Spring MVC}\footnote{\url{http://spring.io/}} framework was the next Web framework taken into consideration. \textit{Spring MVC} is regarded as a similar solution compared to \textit{Play!}, especially when it comes to application structure and runtime behaviour \cite[p. 109]{Scala}. As its name implies, \textit{Spring MVC} features a comparable MVC (Model-View-Controller) structure; however, \textit{Spring MVC} does not include its own Web server, but can be executed on a number of different servers. In order to provide similar capabilities as \textit{Play!}'s integrated \textit{Netty} server (see section \ref{lab:play}, \textit{Performance}), \textit{Jetty}\footnote{\url{http://www.eclipse.org/jetty/}} was used as a Web server for the \textit{Spring MVC} application.
+To test the behaviour of thread-based applications side by side to event-based applications, tests should preferably be conducted under very similar conditions, the only major difference being asynchronous processing. Since in section \ref{lab:lang} the \textit{Play!} framework was identified as a feasible choice for demonstrating asynchronous processing in Web frameworks, \textit{Play!} is also used in the following performance tests. To achieve comparable performance, the thread-based contender application should ideally also be run on the \textit{Java} virtual machine (JVM). This leaves numerous choices due to the high number of \textit{Java}-based Web frameworks. The first choice was the \textit{Grails}\footnote{\url{https://grails.org/}} framework, which is based on \textit{Groovy}\footnote{\url{http://groovy.codehaus.org/}} language. Since \textit{Groovy}---like \textit{Scala}---is also an extension language to \textit{Java} and can be run on the \textit{Java} VM, it seemed like a good choice to compare to \textit{Play!}. However, \textit{Grails} proved to have a much larger memory footprint compared to \textit{Play!} and even exceeded the 512MB memory limit on the server container (see below). This imbalance ruled out \textit{Grails} as a fitting contender. The \textit{Spring MVC}\footnote{\url{http://spring.io/}} framework was the next Web framework taken into consideration. \textit{Spring MVC} is regarded as a similar solution compared to \textit{Play!}, especially when it comes to application structure and runtime behaviour \cite[p. 109]{Scala}. As its name implies, \textit{Spring MVC} features a comparable MVC (Model-View-Controller) structure; however, \textit{Spring MVC} does not include its own Web server, but can be executed on a number of different servers. In order to provide similar capabilities as \textit{Play!}'s integrated \textit{Netty} server (see section \ref{lab:play}, \textit{Performance}), \textit{Jetty}\footnote{\url{http://www.eclipse.org/jetty/}} was used as a Web server for the \textit{Spring MVC} application.
 
-Obviously, to achieve neutral performance measurements, the two applications must be run on identical, yet independent systems. This, as well as the desire to simulate conditions also present in production setups, led to the decision to conduct the performance tests on virtual servers hosted by a \textit{cloud PaaS}\footnote{Platform as a Service. A computing platform provided by a third-party company using large-scale computing and networking systems.}. Due to the simplicity of deployment and replication, \textit{Heroku}\footnote{\url{http://www.heroku.com}} was the platform of choice. On \textit{Heroku}, various application technologies -- including \textit{Java} -- can be deployed and run within isolated containers in a controlled, reproducible fashion. The containers used for testing both are equipped with an \textit{Intel Xeon X5550} quad-core processor clocked at 2.67GHz and can address 512MB of memory.
+Obviously, to achieve neutral performance measurements, the two applications must be run on identical, yet independent systems. This, as well as the desire to simulate conditions also present in production setups, led to the decision to conduct the performance tests on virtual servers hosted by a \textit{cloud PaaS}\footnote{Platform as a Service. A computing platform provided by a third-party company using large-scale computing and networking systems.}. Due to the simplicity of deployment and replication, \textit{Heroku}\footnote{\url{http://www.heroku.com}} was the platform of choice. On \textit{Heroku}, various application technologies---including \textit{Java}---can be deployed and run within isolated containers in a controlled, reproducible fashion. The containers used for testing both are equipped with an \textit{Intel Xeon X5550} quad-core processor clocked at 2.67GHz and can address 512MB of memory.
 
 Both applications were set up using their default configuration and using the \textit{Java} 7 platform. Tests were implemented as controller actions within the MVC environment and were triggered using HTTP requests to certain URLs, exactly as connecting via a website or HTTP interface would. Details on the individual tests are available in section \ref{lab:testing}. To simulate the response of the servers to large client demand, a single personal computer does not suffice. Manual testing, for instance with a browser, can only create several requests per second and even automated testing with tools like \textit{JMeter}\footnote{\url{http://jmeter.apache.org/}} may not produce desirable results due to limited bandwidth of a standard internet connections. Thus, a specialised online service that focusses on the simulation of large client loads under realistic conditions was used for testing; \textit{loader.io}\footnote{\url{https://loader.io/}} offers multiple options of load testing and the free plan supports up to 10000 concurrent connections per test.
 
 \section{Testing} 
 \label{lab:testing}
-The first test conducted was a benchmark test to ensure that both systems perform equally in terms of raw computing power. To get an impression of processing speed, the time to complete an arithmetic integer operation can be measured. Initially, the recursive calculation of a certain number in the \textit{Fibonacci}\footnote{\textit{Fibonacci} numbers are produced by adding up the previous two numbers of the series, starting with 0 and 1.} series was chosen as a suitable calculation. However, the tests produced very different results between the \textit{Scala} and \textit{Java} applications. This is due to the fact that the \textit{Scala} compiler uses a technique called \textit{tail recursion}, which simplifies certain recursive constructs \cite{Malone2008}. Thus, an iterative implementation of the \textit{Fibonacci} algorithm was employed with almost equal outcome: The calculation of the 100000th \textit{Fibonacci} number took the \textit{Spring MVC} application 342 milliseconds and the \textit{Play!} application 340 milliseconds on average during ten passes.
+The first test conducted was a benchmark test to ensure that both systems perform equally in terms of raw computing power. To get an impression of processing speed, the time to complete an arithmetic integer operation can be measured. Initially, the recursive calculation of a certain number in the \textit{Fibonacci}\footnote{\textit{Fibonacci} numbers are produced by adding up the previous two numbers of the series, starting with 0 and 1.} series was chosen as a suitable calculation. However, the tests produced very different results between the \textit{Scala} and \textit{Java} applications. This is due to the fact that the \textit{Scala} compiler uses a technique called \textit{tail recursion}, which simplifies certain recursive constructs \cite{Malone2008}. Thus, an iterative implementation of the \textit{Fibonacci} algorithm was employed with almost equal outcome: the calculation of the 100000th \textit{Fibonacci} number took the \textit{Spring MVC} application 342 milliseconds and the \textit{Play!} application 340 milliseconds on average during ten passes.
 
 After ensuring that both systems work with equal computation speed, the actual load tests could be conducted. \textit{loader.io} offers a test type that gradually increases the request frequency over a set amount of time; in all tests listed here, request frequency was increased during a timeframe of 30 seconds, meaning that each test lasted 30 seconds and then stopped. By measuring the average response time for a certain request frequency, the behaviour of the servers can be characterised. \textit{loader.io} offers a Web-based graph that displays this behaviour for one test per server; however, to acquire the graphs used in this chapter, a dedicated script gathered the different datasets and merged them to graphs that display the data for both applications with equal scale.
 
-There are two main test categories. The first observes the behaviour of the servers for ``on-system operations'', i.e. calculations that demand computation time directly on the server -- like for instance image processing. The second category observes ``off-system operations'' like Web requests, database queries or cache lookups. Both categories feature a number of tests with varying parameters to generate different benchmarks of the server behaviour. During all tests, parameters were chosen in a way that generated interesting and meaningful results, but without compromising server stability; load was limited to the maximum both servers could handle without crashing.
+There are two main test categories. The first observes the behaviour of the servers for ``on-system operations'', i.e. calculations that demand computation time directly on the server---like for instance image processing. The second category observes ``off-system operations'' like Web requests, database queries or cache lookups. Both categories feature a number of tests with varying parameters to generate different benchmarks of the server behaviour. During all tests, parameters were chosen in a way that generated interesting and meaningful results, but without compromising server stability; load was limited to the maximum both servers could handle without crashing.
 
 On-system tests simulated server load by calculating a certain \textit{Fibonacci} number for each request, thus blocking either the Web thread (in the \textit{Spring MVC} application) or an actor-based worker thread (in the \textit{Play!} application). The complexity of the calculation was increased with different step sizes (with the linear increase rate of the request frequency being constant) and the most interesting results were chosen for presentation in the following section. 
 
@@ -27,7 +27,7 @@ Off-system tests loaded the content of a website\footnote{\url{http://www.google
 
 \section{Results}
 \subsection*{On-system Tests}
-The first test was set up using the relatively fast calculation of the 1000th \textit{Fibonacci} number. A single request of this kind took both applications on average 170 milliseconds to process. However, with increasing request frequency, the average response times of the two applications drift apart with the \textit{Play!} application achieving generally lower response times, the difference being about 1000 milliseconds at 5000 requests per second (see figure \ref{fig:test1}). However, when increasing the computation complexity by calculating the 5000th \textit{Fibonacci} number -- resulting in an average response time of 300 milliseconds per request -- the response time difference between the two applications decreases with \textit{Play!} still being faster, but only with a difference of about 500 milliseconds at 5000 requests per second (see figure \ref{fig:test2}). A further increase of the computation complexity to the 10000th and 50000th \textit{Fibonacci} number -- resulting in 300 and 400 milliseconds average response time per request, respectively -- shows that the response times of the two applications become more and more similar until being nearly identical for the 50000th \textit{Fibonacci} number (see figures \ref{fig:test3} and \ref{fig:test4}).
+The first test was set up using the relatively fast calculation of the 1000th \textit{Fibonacci} number. A single request of this kind took both applications on average 170 milliseconds to process. However, with increasing request frequency, the average response times of the two applications drift apart with the \textit{Play!} application achieving generally lower response times, the difference being about 1000 milliseconds at 5000 requests per second (see figure \ref{fig:test1}). However, when increasing the computation complexity by calculating the 5000th \textit{Fibonacci} number---resulting in an average response time of 300 milliseconds per request---the response time difference between the two applications decreases with \textit{Play!} still being faster, but only with a difference of about 500 milliseconds at 5000 requests per second (see figure \ref{fig:test2}). A further increase of the computation complexity to the 10000th and 50000th \textit{Fibonacci} number---resulting in 300 and 400 milliseconds average response time per request, respectively---shows that the response times of the two applications become more and more similar until being nearly identical for the 50000th \textit{Fibonacci} number (see figures \ref{fig:test3} and \ref{fig:test4}).
 
 \begin{figure}
 \centering\small
